--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,14 @@ apply plugin: 'application'
 
 mainClassName = 'edu.purdue.cs.toydroid.bidtext.TextLeak'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_21
+targetCompatibility = JavaVersion.VERSION_21
 
 distTar.enabled = false
 
 repositories {
     mavenCentral()
+    google() // for smali
 }
 
 distributions {
@@ -46,10 +47,26 @@ jar {
 }
 
 dependencies {
-    implementation 'com.ibm.wala:com.ibm.wala.core:1.5.9'
-    implementation 'com.ibm.wala:com.ibm.wala.cast:1.5.9'
-    implementation 'com.ibm.wala:com.ibm.wala.dalvik:1.5.9'
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
+    implementation 'com.ibm.wala:com.ibm.wala.core:1.6.3'
+    implementation 'com.ibm.wala:com.ibm.wala.cast:1.6.3'
+    implementation 'com.ibm.wala:com.ibm.wala.dalvik:1.6.3'
+    implementation 'org.apktool:apktool-lib:2.8.1'
+//    implementation 'com.android.tools.smali:smali:3.0.5'
+    implementation 'org.smali:dexlib2:2.5.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+    implementation 'org.slf4j:slf4j-api:2.0.12'
+//    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+//    implementation 'com.google.errorprone:error_prone_annotations:2.25.0'
+    implementation 'com.google.guava:guava:33.0.0-jre'
+    implementation 'commons-io:commons-io:2.15.1'
+    implementation 'org.checkerframework:checker-qual:3.42.0'
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.6'
+//    implementation 'commons-cli:commons-cli:1.6.0' //1.2
+    implementation 'org.ogce:xpp3:1.1.6'
+
+
+
+
 
     // local libs
     implementation fileTree(dir: 'lib', include: ['*.jar'])
