New entry and sequence of text leak analysis for Java
Former-commit-id: ff27ef8b2fad40f171e6ee9266bbb6fa97d7cae4
Former-commit-id: fc91ebcf49dfdaaa664e293560e09ad2e54cd40f

--- a/res/wala.properties
+++ b/res/wala.properties
@@ -15,7 +15,7 @@
 #
 # Info: Location must be absolute.
 #####
-java_runtime_dir=/usr/lib/jvm/bellsoft-java21-full-amd64/bin
+java_runtime_dir=/usr/lib/jvm/bellsoft-java21-full-amd64/lib
 ################### Mandatory settings with default value ######################
 ##### Default output dir
 # Identify directory where all generated files without absolute path will be located.
@@ -23,7 +23,7 @@ java_runtime_dir=/usr/lib/jvm/bellsoft-java21-full-amd64/bin
 # Default value: results [Non absolute path are relative to WALA home location]
 # Info: Can be absolute or relative.
 #####
-#output_dir = /tmp/wala
+output_dir=/tmp/wala
 ################### Mandatory settings for Android (Dalvik) ####################
 # location of runtime jar
 #android_rt_jar = .../android-sdk-macosx/platforms/android-20/android.jar
