Use active VM and load exclusions
Former-commit-id: b8ee24065b430c14eed39b6e89cce1cff70a2207
Former-commit-id: 4dd2616190d548cd5a3b4e838dcd528c5363041f

--- a/res/wala.properties
+++ b/res/wala.properties
@@ -15,7 +15,7 @@
 #
 # Info: Location must be absolute.
 #####
-java_runtime_dir=/usr/lib/jvm/bellsoft-java21-full-amd64/lib
+java_runtime_dir=
 ################### Mandatory settings with default value ######################
 ##### Default output dir
 # Identify directory where all generated files without absolute path will be located.
