--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,8 @@ dependencies {
     implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'commons-io:commons-io:2.15.1'
     implementation 'org.checkerframework:checker-qual:3.42.0'
-    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.6'
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.7'
+    implementation 'edu.stanford.nlp:stanford-corenlp:4.5.7:models'
 //    implementation 'commons-cli:commons-cli:1.6.0' //1.2
     implementation 'org.ogce:xpp3:1.1.6'
 
