Make analysis options accessible through config

--- a/res/Config.properties
+++ b/res/Config.properties
@@ -1,5 +1,31 @@
+#-------------------------------------------------------
+# Predefined input files for the analysis
+#-------------------------------------------------------
 INCLUSIONS=Inclusions.txt
+#INCLUSIONS=Inclusions_alpaca.txt
 EXCLUSIONS=Exclusions.txt
+#EXCLUSIONS=Exclusions_alpaca.txt
 SINK_DEFINITIONS=Sinks.txt
 ARTIFICIAL_SOURCES=ArtificialSources.txt
 API_PROPAGATION_RULES=ApiPropagationRules.txt
+#
+#-------------------------------------------------------
+# Analysis options
+#-------------------------------------------------------
+# enable this option to analyze Spring applications with dependency injection
+# the option can stay enabled for non-Spring applications
+SPRING_PREPROCESSING_ENABLED=true
+# use comma separated list for prefixes
+PREFIXES_OF_CALLBACK_METHODS=on
+# the analysis can have trouble if abstract methods are called from entrypoints
+# enable this option to accept abstract methods themselves as entry points even if they do not override library methods
+USE_WORKAROUND_FOR_ABSTRACT=true
+# enable this option to use any method with prefix as entry point regardless if the method overrides a library method etc.
+# required if applications do not follow a strict naming convention for callback methods or for Spring applications
+USE_ANY_METHOD_WITH_PREFIX_AS_ENTRYPOINT=false
+# timeout for the analysis in minutes
+TIMEOUT=20
+# threshold of the number of nodes in the SDG the switch to context-insensitive analysis; recommended 1 million
+THRESHOLD_CONTEXT_INSENSITIVE=1000000
+# threshold of the number of nodes in the SDG the skip the analysis of an entry point; recommended 10 million
+THRESHOLD_SKIP_ENTRYPOINT=10000000
