make sensitive terms configurable

--- a/res/Config.properties
+++ b/res/Config.properties
@@ -8,6 +8,8 @@ EXCLUSIONS=Exclusions.txt
 SINK_DEFINITIONS=Sinks.txt
 ARTIFICIAL_SOURCES=ArtificialSources.txt
 API_PROPAGATION_RULES=ApiPropagationRules.txt
+SENSITIVE_TERMS=SensitiveTerms.txt
+#SENSITIVE_TERMS=SensitiveTerms_ComparisonCodeQL.txt
 #
 #-------------------------------------------------------
 # Analysis options
