--- a/res/Config.properties
+++ b/res/Config.properties
@@ -16,7 +16,11 @@ SENSITIVE_TERMS=SensitiveTerms.txt
 #-------------------------------------------------------
 # enable this option to analyze Spring applications with dependency injection
 # the option can stay enabled for non-Spring applications
-SPRING_PREPROCESSING_ENABLED=true
+SPRING_PREPROCESSING_ENABLED=false
+# enable this option to provide a hint to the garbage collector after the intermediate class hierarchy is no longer needed
+# -> see section 5.4 in the thesis for more information
+# the option is only effective if spring processing is enabled
+ENABLE_GARBAGE_COLLECTOR_HINT_AFTER_INTERMEDIATE_CLASS_HIERARCHY=true
 # use comma separated list for prefixes
 PREFIXES_OF_CALLBACK_METHODS=on
 # the analysis can have trouble if abstract methods are called from entrypoints
