further reproduction instructions

--- a/res/Config.properties
+++ b/res/Config.properties
@@ -25,9 +25,11 @@ ENABLE_GARBAGE_COLLECTOR_HINT_AFTER_INTERMEDIATE_CLASS_HIERARCHY=true
 PREFIXES_OF_CALLBACK_METHODS=on
 # the analysis can have trouble if abstract methods are called from entrypoints
 # enable this option to accept abstract methods themselves as entry points even if they do not override library methods
+# -> see section 4.3.3 in the thesis for more information
 USE_WORKAROUND_FOR_ABSTRACT=true
 # enable this option to use any method with prefix as entry point regardless if the method overrides a library method etc.
 # required if applications do not follow a strict naming convention for callback methods or for Spring applications
+# -> see section 4.4 in the thesis for more information
 USE_ANY_METHOD_WITH_PREFIX_AS_ENTRYPOINT=false
 # timeout for the analysis in minutes
 TIMEOUT=20
