Make spring entrypoint discovery configurable

--- a/res/Config.properties
+++ b/res/Config.properties
@@ -14,13 +14,6 @@ SENSITIVE_TERMS=SensitiveTerms.txt
 #-------------------------------------------------------
 # Analysis options
 #-------------------------------------------------------
-# enable this option to analyze Spring applications with dependency injection
-# the option can stay enabled for non-Spring applications
-SPRING_PREPROCESSING_ENABLED=true
-# enable this option to provide a hint to the garbage collector after the intermediate class hierarchy is no longer needed
-# -> see section 5.4 in the thesis for more information
-# the option is only effective if spring processing is enabled
-ENABLE_GARBAGE_COLLECTOR_HINT_AFTER_INTERMEDIATE_CLASS_HIERARCHY=true
 # use comma separated list for prefixes
 PREFIXES_OF_CALLBACK_METHODS=on
 # the analysis can have trouble if abstract methods are called from entrypoints
@@ -31,6 +24,19 @@ USE_WORKAROUND_FOR_ABSTRACT=true
 # required if applications do not follow a strict naming convention for callback methods or for Spring applications
 # -> see section 4.5 in the thesis for more information
 USE_ANY_METHOD_WITH_PREFIX_AS_ENTRYPOINT=false
+#
+# enable this option to model dependency injection in Spring applications
+# the option can stay enabled for non-Spring applications
+ENABLE_SPRING_DI_PREPROCESSING=true
+# enable this option to scan for entry points in Spring applications by annotations in addition to the check for callback methods
+# -> see section 5.4 in the thesis for more information
+# the option is only effective if spring DI processing is enabled
+ENABLE_SPRING_ENTRYPOINT_DISCOVERY=true
+# enable this option to provide a hint to the garbage collector after the intermediate class hierarchy is no longer needed
+# -> see section 5.5 in the thesis for more information
+# the option is only effective if spring DI processing is enabled
+ENABLE_GARBAGE_COLLECTOR_HINT_AFTER_INTERMEDIATE_CLASS_HIERARCHY=true
+#
 # timeout for the analysis in minutes
 TIMEOUT=20
 # threshold of the number of nodes in the SDG the switch to context-insensitive analysis; recommended 1 million
